# brain-tumor-classifier

./: .gitignore  README.md  brain_tumor_cnn.ipynb  brain_tumor_dataset.py  main.ipynb  pyproject.toml  python-real-world-applications.md
model/: config.yaml  main.ipynb
model/utils/: _callbacks.py  _data.py  _evaluation.py  _image.py  _model.py  _plot.py  utils.py
server/: api.py  utils.py
server/static/: index.html  script.js  styles.css
