[project]
name = "Brain-Tumor-Classifier"
version = "0.0.0"
description = "Brain tumor classifier for HKR Machine Learning course"
authors = [
 { name = "Adis Veletanlic", email = "adis.veletanlic@gmail.com" } 
]

dependencies = [
  "build",
  "jupyter",
  "matplotlib",
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "tensorflow",
  "torchvision",
  "torch",
  "tqdm",
  "opencv-python",
  "scikit-image",
  "imutils",
  "pydicom",
  "tqdm",
  "zipfile36",
  "h5py"
]

[tool.setuptools.packages.find]
exclude = ["Testing", "Training"]

[build-system]
requires = [
  "setuptools>=46.1.3",
  "wheel>=0.34.2"
]
build-backend = "setuptools.build_meta"